correctif apparition scrollbar verticaux

--- a/projects/admin/src/app/front/front/front/front.component.scss
+++ b/projects/admin/src/app/front/front/front/front.component.scss
@@ -1,4 +1,3 @@
-
 @media (max-width: 767.98px) {
   .title-bg, app-title {
     display: none !important;
@@ -28,7 +27,16 @@ app-front-navbar {
   }
 }
 
+html, body {
+  overflow-y: hidden !important;
+  height: 100vh !important;
+}
+
 .container-fluid.root-bg {
+  position: relative;
+  min-height: 100vh;
+  height: 100vh;
+  overflow-y: auto;
   padding-right: 0 !important;
   padding-left: 0 !important;
   margin-right: 0 !important;
@@ -37,12 +45,12 @@ app-front-navbar {
   box-sizing: border-box;
 }
 
-
-html, body {
-  width: 100vw;
-  overflow-x: hidden;
+/* Suppression des ombres visuelles sur la zone scrollable */
+.container-fluid.root-bg::before,
+.container-fluid.root-bg::after {
+  content: none !important;
+  display: none !important;
 }
-
 
 .row {
   margin-right: 0 !important;
@@ -88,6 +96,15 @@ html, body {
   font-family: 'Emblema One', cursive;
   background-color: rgb(46, 51, 45);
   color: white;
+}
+
+/* Masque la scrollbar verticale interne tout en gardant le scroll fonctionnel */
+.container-fluid.root-bg {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+.container-fluid.root-bg::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
 }
 
 
